<?xml version="1.0"?>
<package>
  <name>loam_velodyne_semantic_mapping</name>
  <version>0.0.0</version>

  <description>
    This is a ROS implementation of LOAM with semantic mapping for Velodyne multiplane laser scanners.
    Semantic mapping module is implemented with Mask R-CNN.
    LOAM: J. Zhang and S. Singh, LOAM: Lidar Odometry and Mapping in Real-time,
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
    Mask R-CNN: K. He, G. Gkioxari, P. Dollár and R. Girshick, Mask R-CNN,
      2017 IEEE International Conference on Computer Vision (ICCV), 2017, pp. 2980-2988, doi: 10.1109/ICCV.2017.322.
  </description>

  <maintainer email="3378772474@qq.com">Li Longwei</maintainer>

  <license>BSD</license>

  <author email="3378772474@qq.com">Li Longwei</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>

  <export>
  </export>
</package>
